# gulvc

./: .editorconfig  .env.example  .gitattributes  .gitignore  .tool-versions  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LEDGER.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json  vitest.config.ts
.changeset/: config.json  m0-foundations.md
docs/: 00-project-overview.md  01-product-requirements-document.md  02-system-architecture.md  03-agent-architecture.md  04-user-stories.md  05-functional-requirements.md  06-nonfunctional-requirements.md  07-technical-specification.md  08-database-design.md  09-api-specification.md  10-capture-engine.md  11-analysis-engine.md  12-generation-engine.md  13-seo-engine.md  14-deployment-engine.md  15-github-integration.md  16-vercel-integration.md  17-security-model.md  18-observability.md  19-testing-strategy.md  20-developer-workflows.md  21-coding-standards.md  22-monorepo-structure.md  23-milestone-roadmap.md  24-backlog.md  25-risk-analysis.md  26-local-development.md  27-production-deployment.md  28-cost-model.md  29-future-vision.md
docs/ADR/: ADR-001-monorepo.md  ADR-002-nextjs.md  ADR-003-playwright.md  ADR-004-vercel.md  ADR-005-agent-orchestration.md
